Add remove target and 9 target default config

--- a/etc/simulation.cfg
+++ b/etc/simulation.cfg
@@ -5,10 +5,10 @@
     "search_area_id" : 45,
     "model_start_time" : 0,
     "model_delta_time" : 200,
-    "u_left_limit" : -0.24,
-    "u_right_limit" : 0.24,
-    "v_left_limit" : -0.24,
-    "v_right_limit" : 0.24
+    "u_left_limit" : -0.499,
+    "u_right_limit" : 0.499,
+    "v_left_limit" : -0.499,
+    "v_right_limit" : 0.499
   },
   "events" :
   {
@@ -17,6 +17,7 @@
       { 
         "type" : "target_add",
         "trigger_time": 3000,
+        "id" : 10001,
         "u" : 0.0,
         "v" : 0.015,
         "u_vel" : 0.01,
@@ -26,6 +27,123 @@
         "power" : 1101,
         "freq_start" : 70.2,
         "freq_width" : 12.6
+      },
+      { 
+        "type" : "target_add",
+        "trigger_time": 3200,
+        "id" : 10002,
+        "u" : 0.108,
+        "v" : 0.0854,
+        "u_vel" : 0.0097,
+        "v_vel" : -0.0092,
+        "variance" : 0.0211,
+        "channel_id" : 1,
+        "power" : 1033,
+        "freq_start" : 76.2,
+        "freq_width" : 56.8
+      },
+      { 
+        "type" : "target_add",
+        "trigger_time": 3200,
+        "id" : 10003,
+        "u" : 0.314,
+        "v" : 0.433,
+        "u_vel" : -0.00552,
+        "v_vel" : -0.01677,
+        "variance" : 0.079,
+        "channel_id" : 2,
+        "power" : 2536,
+        "freq_start" : 28.0,
+        "freq_width" : 7.74
+      },
+      { 
+        "type" : "target_add",
+        "trigger_time": 3200,
+        "id" : 10004,
+        "u" : 0.476,
+        "v" : -0.366,
+        "u_vel" : -0.0089,
+        "v_vel" : -0.0038,
+        "variance" : 0.009,
+        "channel_id" : 3,
+        "power" : 9011,
+        "freq_start" : 46.164,
+        "freq_width" : 4.2188
+      },
+      { 
+        "type" : "target_add",
+        "trigger_time": 3400,
+        "id" : 10005,
+        "u" : 0.30459,
+        "v" : -0.035172,
+        "u_vel" : 0.00002819,
+        "v_vel" : -0.0078221,
+        "variance" : 0.0047,
+        "channel_id" : 4,
+        "power" : 2518,
+        "freq_start" : 46.164,
+        "freq_width" : 66.901
+      },
+      { 
+        "type" : "target_add",
+        "trigger_time": 3400,
+        "id" : 10006,
+        "u" : 0.15807,
+        "v" : 0.0555,
+        "u_vel" : -0.001482,
+        "v_vel" : 0.00289,
+        "variance" : 0.00425,
+        "channel_id" : 5,
+        "power" : 5149,
+        "freq_start" : 95.453,
+        "freq_width" : 14.244
+      },
+      { 
+        "type" : "target_add",
+        "trigger_time": 3400,
+        "id" : 10007,
+        "u" : -0.10591,
+        "v" : -0.4234,
+        "u_vel" : -0.0016278,
+        "v_vel" : 0.0036934,
+        "variance" : 0.001475,
+        "channel_id" : 6,
+        "power" : 3849,
+        "freq_start" : 99.77,
+        "freq_width" : 3.1821
+      },
+      { 
+        "type" : "target_add",
+        "trigger_time": 3400,
+        "id" : 10008,
+        "u" : 0.36629,
+        "v" : 0.0000628,
+        "u_vel" : -0.001532,
+        "v_vel" : 0.002752,
+        "variance" : 0.00007844,
+        "channel_id" : 7,
+        "power" : 14748,
+        "freq_start" : 79.036,
+        "freq_width" : 48.52
+      },
+      { 
+        "type" : "target_add",
+        "trigger_time": 4600,
+        "id" : 10009,
+        "u" : -0.15512,
+        "v" : -0.46676,
+        "u_vel" : -0.0019624,
+        "v_vel" : 0.00000331,
+        "variance" : 0.0000718,
+        "channel_id" : 1,
+        "power" : 3986,
+        "freq_start" : 99.67,
+        "freq_width" : 64.026
+      },
+      { 
+        "type" : "target_remove",
+        "trigger_time": 20000,
+        "id" : 10003
       }
     ]
   }
