--- a/etc/simulation.cfg
+++ b/etc/simulation.cfg
@@ -22,7 +22,8 @@
         "v" : 0.015,
         "u_vel" : 0.01,
         "v_vel" : -0.02,
-        "variance" : 0.001,
+        "u_variance" : 0.001,
+        "v_variance" : 0.001,
         "channel_id" : 6,
         "power" : 1101,
         "freq_start" : 70.2,
@@ -36,7 +37,8 @@
         "v" : 0.0854,
         "u_vel" : 0.0097,
         "v_vel" : -0.0092,
-        "variance" : 0.0211,
+        "u_variance" : 0.0211,
+        "v_variance" : 0.0211,
         "channel_id" : 1,
         "power" : 1033,
         "freq_start" : 76.2,
@@ -50,7 +52,8 @@
         "v" : 0.433,
         "u_vel" : -0.00552,
         "v_vel" : -0.01677,
-        "variance" : 0.079,
+        "u_variance" : 0.079,
+        "v_variance" : 0.079,
         "channel_id" : 2,
         "power" : 2536,
         "freq_start" : 28.0,
@@ -64,7 +67,8 @@
         "v" : -0.366,
         "u_vel" : -0.0089,
         "v_vel" : -0.0038,
-        "variance" : 0.009,
+        "u_variance" : 0.009,
+        "v_variance" : 0.009,
         "channel_id" : 3,
         "power" : 9011,
         "freq_start" : 46.164,
@@ -78,7 +82,8 @@
         "v" : -0.035172,
         "u_vel" : 0.00002819,
         "v_vel" : -0.0078221,
-        "variance" : 0.0047,
+        "u_variance" : 0.0047,
+        "v_variance" : 0.0047,
         "channel_id" : 4,
         "power" : 2518,
         "freq_start" : 46.164,
@@ -92,7 +97,8 @@
         "v" : 0.0555,
         "u_vel" : -0.001482,
         "v_vel" : 0.00289,
-        "variance" : 0.00425,
+        "u_variance" : 0.00425,
+        "v_variance" : 0.00425,
         "channel_id" : 5,
         "power" : 5149,
         "freq_start" : 95.453,
@@ -106,7 +112,8 @@
         "v" : -0.4234,
         "u_vel" : -0.0016278,
         "v_vel" : 0.0036934,
-        "variance" : 0.001475,
+        "u_variance" : 0.001475,
+        "v_variance" : 0.00425,
         "channel_id" : 6,
         "power" : 3849,
         "freq_start" : 99.77,
@@ -120,7 +127,8 @@
         "v" : 0.0000628,
         "u_vel" : -0.001532,
         "v_vel" : 0.002752,
-        "variance" : 0.00007844,
+        "u_variance" : 0.00007844,
+        "v_variance" : 0.00007844,
         "channel_id" : 7,
         "power" : 14748,
         "freq_start" : 79.036,
@@ -134,7 +142,8 @@
         "v" : -0.46676,
         "u_vel" : -0.0019624,
         "v_vel" : 0.00000331,
-        "variance" : 0.0000718,
+        "u_variance" : 0.0000718,
+        "v_variance" : 0.0000718,
         "channel_id" : 1,
         "power" : 3986,
         "freq_start" : 99.67,
